more fix on mobile responsive

--- a/src/components/content/about/detailContainer1/detailsContainer1.module.css
+++ b/src/components/content/about/detailContainer1/detailsContainer1.module.css
@@ -9,7 +9,7 @@
   font-family: "Montserrat ", sans-serif;
 }
 
-@media (min-width: 500px) {
+@media (min-width: 375px) {
   .detailContainer1GridWrapper {
     display: grid;
     grid-template-columns: 1fr;
@@ -28,7 +28,7 @@
     text-align: center;
   }
   .detailContainer1GridWrapper img {
-    width: 70%;
+    width: 100%;
     padding: 30px 0;
     margin: auto;
   }
