--- a/src/components/content/about/detailsContainer3/detailsContainer3.module.css
+++ b/src/components/content/about/detailsContainer3/detailsContainer3.module.css
@@ -6,7 +6,18 @@
   font-family: "Playfair Display", serif;
 }
 
-@media (min-width: 500px) {
+.detailsContainer3 ::after {
+  content: "";
+  height: 70px;
+  width: 2px;
+  background-color: #1951d6;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 0;
+}
+
+@media (min-width: 375px) {
   .detailContainer3GridWrapper {
     display: grid;
     grid-template-columns: 1fr;
@@ -17,25 +28,21 @@
     color: #072975;
     font-size: large;
     margin-top: 30px;
+    text-align: center;
   }
   .detailContainer3GridWrapper p {
     color: #3f3f3f;
     font-size: small;
   }
   .detailContainer3GridWrapper img {
-    width: 70%;
+    width: 100%;
     margin: auto;
     padding: 30px 0;
   }
-  .detailsContainer3 ::after {
-    content: "";
-    height: 70px;
-    width: 2px;
-    background-color: #1951d6;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: 0;
+
+  .contentDetailContainer3 {
+    text-align: center;
+    padding-bottom: 20px;
   }
 }
 @media (min-width: 750px) {
