--- a/src/components/hero/clientResources/clientResources.module.css
+++ b/src/components/hero/clientResources/clientResources.module.css
@@ -1,4 +1,4 @@
-@media (min-width: 500px) {
+@media (min-width: 375px) {
   .heroClientFlexWrapper {
     display: flex;
     flex-direction: column;
